    - Update of config.{sub,guess} is done by dh_update_autotools_config
    - build done by dh_auto_build, instead of manual "make all"
    - call dh_auto_clean instead of manual "make distclean"
    - replace some install calls by entries in $package.install files
    - remove "-l option" from dh_shlibdeps call
    - install init script and defaults file using dh_installinit

  [1] https://lists.debian.org/debian-devel-announce/2016/11/msg00001.html

 -- Mahyuddin Susanto <udienz@gmail.com>  Wed, 24 Aug 2016 15:23:38 -0700

proftpd-dfsg (1.3.5a-1) unstable; urgency=medium

  * New upstream release. Patch CVE-2015-3306 merged.
    - Contains fix for upstream bug 4108 (Closes: #787434)
    - Contains fix for mod_ls.c (Closes: #782771)
  * Patches refreshed.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 27 Jan 2016 12:18:06 +0100

proftpd-dfsg (1.3.5-2) unstable; urgency=high

  * proftpd-dev: Depend on libtool-bin: merged NMU, thanks Doko.
    (closes: #761795) 
  * Add CVE-2015-3306 patch.
    Unauthenticated copying of files via SITE CPFR/CPTO allowed by mod_copy.
    (closes: #782781)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 23 Apr 2015 14:11:19 +0200

proftpd-dfsg (1.3.5-1) unstable; urgency=medium

  * New upstream release. Patch 4044 merged.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 13 Jun 2014 11:55:22 +0200

proftpd-dfsg (1.3.5~rc4-3) unstable; urgency=medium

  * Fixed postinst for invalid usermod call.
  * New patch added to fix upstream bug #4044. This fix now allows using a
    proper reload instead of a restart in the init script.
    (closes: #594449, #675081)
  * The previous change for the start-stop-daemon appears invalid, so changed
    a bit timings to possibly allow proper stops under heavy loads.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 29 Apr 2014 08:25:22 +0200

proftpd-dfsg (1.3.5~rc4-2) unstable; urgency=medium

  * Now using /run instead of /var/run for state directory.