@@ -1,0 +1,23 @@
+debian/files.saved
+debian/files
+config.cache
+config.log
+ftpshut
+Make.rules
+modules/mod_ratio.c
+contrib/mod_wrap2/mod_wrap2.h
+contrib/mod_wrap2/Makefile
+contrib/mod_load/mod_load.h
+contrib/mod_load/Makefile
+contrib/mod_sftp/mod_sftp.h
+contrib/mod_sftp/Makefile
+src/ftpdctl.8
+src/proftpd.8
+src/proftpd.conf.5
+src/xferlog.5
+utils/ftpcount.1
+utils/ftpscrub.8
+utils/ftpshut.8
+utils/ftptop.1
+utils/ftpwho.1
+src/prxs
