@@ -91,29 +91,17 @@ myclean:
 	dh_auto_clean
 	dh_clean
 	
-	rm -f debian/files.saved debian/files
+	# A few surplus files are removed using debian/clean
 	rm -f $$(find . -type l) $$(find . -name "*~" -o -name "*.o")
-	rm -f $(NAME) config.cache config.log lib/*.a ftpshut Make.rules
+	rm -f $(NAME) lib/*.a
 	rm -rf debian/$(PACKAGE) debian/$(NAME)-doc
 	rm -rf debian/files* debian/*.gz core
-	rm -f $$(find * -name "*.orig") modules/mod_ratio.c
+	rm -f $$(find * -name "*.orig")
 	rm -rf $$(find $(CURDIR) -name .libs)
 	rm -f $$(find $(CURDIR) -name config.log )
 	rm -f $$(find $(CURDIR) -name config.status )
-	rm -f contrib/mod_wrap2/mod_wrap2.h \
-	      contrib/mod_wrap2/Makefile \
-	      contrib/mod_load/mod_load.h \
-	      contrib/mod_load/Makefile \
-	      contrib/mod_sftp/mod_sftp.h \
-	      contrib/mod_sftp/Makefile
 	# clean up libtool files still around
 	find contrib -name "*.la" -exec rm -f {} \;
-	# some manual page are generated during build:
-	rm -f src/ftpdctl.8 src/proftpd.8 src/proftpd.conf.5 src/xferlog.5
-	rm -f utils/ftpcount.1 utils/ftpscrub.8 utils/ftpshut.8 utils/ftptop.1
-	rm -f utils/ftpwho.1
-	# prxs is created from prxs.in
-	rm -f src/prxs
 
 binary-indep: checkroot build
 	dh_installdirs -i
